# natus_suites

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
00_empty/: main.cpp
01_properties/: main.cpp
02_profile/: CMakeLists.txt  main.cpp
04_app/: main.cpp
05_imgui/: main.cpp
06_devices/: main.cpp
07_gamepad/: main.cpp
08_gamepad2/: main.cpp
09_gamepad3/: main.cpp
10_database/: CMakeLists.txt  main.cpp
10_database/data/: data.txt  db.natus
10_database/data/subfolder/: data.txt
11_database/: main.cpp
12_database/: data.natus  main.cpp
13_1_tasks/: main.cpp
13_2_thread_pool/: main.cpp
13_3_parallel_for/: main.cpp
13_4_loose_scheduler/: main.cpp
13_tasks/: main.cpp
14_0_import/: main.cpp
14_import/: main.cpp
15_import/: main.cpp
16_0_nsl/: main.cpp
16_1_nsl/: data.ndb
16_2_nsl/: main.cpp
16_nsl/: main.cpp
17_nsl/: main.cpp
18_import/: main.cpp
18_nsl/: main.cpp
19_0_audio_oal_capture/: main.cpp
19_0_audio_wasapi_capture/: CMakeLists.txt  main.cpp
19_0_audio_wasapi_capture_2/: main.cpp
19_0_system_audio_capture/: main.cpp
19_2_audio_oal_capture_2/: main.cpp
19_3_audio_capture/: main.cpp
19_4_audio_async_capture/: main.cpp
19_5_audio_gen_2/: main.cpp
19_6_audio_play/: main.cpp
19_audio/: main.cpp
20_audio/: main.cpp
21_audio/: main.cpp
22_audio/: main.cpp
23_audio/: main.cpp
24_audio/: main.cpp
25_audio/: main.cpp
26_framebuffer/: main.cpp
26_render_states/: main.cpp
27_0_framebuffer_simple/: main.cpp
27_1_framebuffer_mrt/: main.cpp
27_2_framebuffer_nsl/: main.cpp
27_framebuffer/: main.cpp
27_framebuffer_simple/: main.cpp
28_framebuffer/: main.cpp
28_framebuffer_mrt/: main.cpp
28_multi_geometry/: main.cpp
29_framebuffer_nsl/: main.cpp
30_0_array_object/: main.cpp
30_1_array_object/: main.cpp
30_array_object/: main.cpp
30_reconfig/: main.cpp
31_0_texture_array/: main.cpp
31_1_texture_array/: main.cpp
31_nsl_auto/: main.cpp
31_texture_array/: main.cpp
31_variable_array/: main.cpp
32_0_stream_out/: main.cpp
32_1_stream_out/: main.cpp
32_2_geometry_shader/: main.cpp
32_2_stream_out/: main.cpp
32_3_stream_out/: main.cpp
32_reconfig/: main.cpp
33_0_geometry_shader/: main.cpp
33_0_nsl_auto/: CMakeLists.txt  main.cpp
33_0_reconfig/: main.cpp
33_1_geometry_shader/: main.cpp
33_1_nsl_auto/: main.cpp
33_2_geometry_shader/: main.cpp
33_2_nsl_auto/: main.cpp
33_3_geometry_shader/: main.cpp
33_nsl_auto/: main.cpp
33_text_render_2d/: CMakeLists.txt  main.cpp
34_0_reconfig/: main.cpp
34_1_nsl_auto/: main.cpp
34_2_nsl_auto/: main.cpp
34_glyph_atlas/: main.cpp
35_text_render_2d/: main.cpp
36_primitive_render_2d/: main.cpp
36_tool_sprite/: main.cpp
37_0_glyph_atlas/: main.cpp
37_1_text_render_2d/: main.cpp
37_2_primitive_render_2d/: main.cpp
chaos_one/: CMakeLists.txt
chaos_one/01_render_context/: main.cpp
chaos_one/02_application_base/: main.cpp
chaos_one/03_app/: main.cpp
chaos_one/04_app/: imgui.ini  main.cpp  test.glsl
chaos_one/04_async_render/: main.cpp
chaos_one/05_imgui/: main.cpp
chaos_one/06_devices/: main.cpp
chaos_one/07_gamepad/: main.cpp
chaos_one/08_gamepad2/: main.cpp
chaos_one/09_gamepad3/: main.cpp
chaos_one/application_base/: main.cpp
chaos_one/render_context/: main.cpp
suite_graphics/: CMakeLists.txt  README.md
suite_graphics/51_2_post_process/working/shaders/: post_process.nsl
suite_graphics/51_3_post_process_fxaa/working/shaders/: nvidia_fxaa_3.1_reformat.txt
suite_physics/: CMakeLists.txt  README.md
suite_physics/0_0_particle_system/: main.cpp
suite_physics/phy_1_0_collision/: main.cpp
suite_physics/phy_1_0_hit_test/: main.cpp
suite_physics/phy_3_0_collision/: main.cpp
suite_proto/: CMakeLists.txt  README.md
suite_proto/43_0_world_2d/: CMakeLists.txt
suite_proto/xx_1_tile_render/: main.cpp
suite_proto/xx_bold_branch_spline_2d/: main.cpp
suite_proto/xx_insertion_sort/: main.cpp
suite_proto/xx_some_math_tests/: CMakeLists.txt
suite_proto/xx_tool_sprite/working/: sprite_sheets.natus
suite_test/: CMakeLists.txt  README.md
suite_test/00_empty/: CMakeLists.txt  main.cpp
suite_test/04_app/: main.cpp
suite_test/05_imgui/: main.cpp
suite_test/06_devices/: main.cpp
suite_test/07_gamepad/: main.cpp
suite_test/10_database/: main.cpp
suite_test/11_database/: data.natus
suite_test/12_database/: data.ndb  main.cpp
suite_test/13_0_tasks/: main.cpp
suite_test/13_3_parallel_for/: main.cpp
suite_test/13_4_loose_scheduler/: main.cpp
suite_test/16_0_nsl/working/shaders/: inout.nsl  main_early_return.nsl
suite_test/16_1_nsl/: main.cpp
suite_test/16_1_nsl/working/shader/: mylib.nsl
suite_test/16_2_nsl/working/shaders/: mylib.nsl
suite_test/19_0_audio_oal_capture/: main.cpp
suite_test/19_0_audio_wasapi_capture_2/: main.cpp
suite_test/19_2_audio_oal_capture_2/: CMakeLists.txt
suite_test/19_3_audio_capture/: main.cpp
suite_test/19_4_audio_async_capture/: main.cpp
suite_test/19_5_audio_gen_2/: main.cpp
suite_test/19_6_audio_play/: main.cpp
suite_test/27_1_framebuffer_mrt/: main.cpp
suite_test/28_multi_geometry/: main.cpp
suite_test/28_multi_geometry/working/shaders/: test_multi_geometry.nsl
suite_test/30_0_array_object/: main.cpp
suite_test/32_0_stream_out/: main.cpp
suite_test/32_1_stream_out/: main.cpp
suite_test/32_3_stream_out/: main.cpp
suite_test/33_0_geometry_shader/: main.cpp
suite_test/33_2_geometry_shader/: main.cpp
suite_test/33_3_geometry_shader/: main.cpp
suite_test/34_2_nsl_auto/: main.cpp
suite_test/37_0_glyph_atlas/: main.cpp
suite_test/38_1_sprite_sheet/: main.cpp
suite_test/38_1_sprite_sheet/working/: imported_one.natus
suite_test/38_2_sprite_sheet/: main.cpp
suite_test/38_3_sprite_sheet/: main.cpp
suite_test/38_3_sprite_sheet/working/: sprite_sheet.natus
suite_test/41_1_particle_system/: main.cpp
suite_test/43_inv_space_2d/: CMakeLists.txt  main.cpp
suite_test/46_0_spline/: main.cpp
suite_test/47_0_keyframe/: main.cpp
suite_test/51_0_post_process/: main.cpp
(+110 files in other folders)
